k8s/log_processor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wmc-log-processor
spec:
  selector:
    matchLabels:
      app: wmc-log-processor
  template:
    metadata:
      labels:
        app: wmc-log-processor
    spec:
      containers:
      - name: log-processor
        image: gersonofstone/centralizegg:1.0.0
        volumeMounts:
        - name: config
          mountPath: /app/hosts.yml
          subPath: hosts.yml
        - name: ssh-keys
          mountPath: /ssh_keys
          readOnly: true
      volumes:
      - name: config
        configMap:
          name: wmc-config
      - name: ssh-keys
        secret:
          secretName: wmc-ssh-keys
          defaultMode: 0400
