k8s/grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wmc-grafana
spec:
  selector:
    matchLabels:
      app: wmc-grafana
  template:
    metadata:
      labels:
        app: wmc-grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:12.0.0
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: grafana-storage
          mountPath: /var/lib/grafana
        - name: grafana-datasources
          mountPath: /etc/grafana/provisioning/datasources
        - name: grafana-dashboards
          mountPath: /etc/grafana/provisioning/dashboards
      volumes:
      - name: grafana-storage
        persistentVolumeClaim:
          claimName: wmc-grafana-pvc
      - name: grafana-datasources
        configMap:
          name: wmc-grafana-datasources
      - name: grafana-dashboards
        configMap:
          name: wmc-grafana-dashboards
---
apiVersion: v1
kind: Service
metadata:
  name: wmc-grafana
spec:
  selector:
    app: wmc-grafana
  ports:
  - port: 3000
    targetPort: 3000
    name: http
